# btc-lottery-miner

./: CMakeLists.txt  LICENSE  README.md
src/: btcclient.cpp  btcclient.h  configfile.cpp  configfile.h  main.cpp
